tests/NormalTests/paczka1/fuzzy1/73405365.err
Error in line 7: FDzhJihv3hi A56 04,5
Error in line 9: S244 S244 165,79
Error in line 15: S244 S700 91,5
Error in line 13: bXCbXhkZ S372 81,0
Error in line 22: bXCbXhkZ S700 86,3
Error in line 24: FDzhJihv3hi S244 23,1
